--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Google</title>
 </head>
 <body>
-    
+    <section>
+        <div class="main">
+            
+        </div>
+    </section>
 </body>
 </html>
