--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <section>
         <div class="main">
-            
+            <img src="images/google.png" alt="Google logo">
         </div>
     </section>
 </body>
