--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <section>
         <div class="main">
             <img src="images/google.png" alt="Google logo">
+            <div class="searchBx">
+                <input type="text" name='' class='query'>
+            </div>
         </div>
     </section>
 </body>
