--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             <img src="images/google.png" alt="Google logo">
             <div class="searchBx">
                 <input type="text" name='' class='query'>
+                <div class="icons">
+                    <div><img src="images/search.png" alt="Search icon"></div>
+                </div>
             </div>
         </div>
     </section>
