--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <input type="text" name='' class='query'>
                 <div class="icons">
                     <div><img src="images/search.png" alt="Search icon"></div>
+                    <div><img src="images/mic.png" alt="Mic icon"></div>
                 </div>
             </div>
         </div>
