--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                     <div><img src="images/mic.png" alt="Mic icon"></div>
                 </div>
             </div>
+            <div class="button">
+                <button class="searchBtn"></button>
+            </div>
         </div>
     </section>
 </body>
