--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
             </div>
             <div class="button">
-                <button class="searchBtn"></button>
+                <button class="searchBtn">Google Search</button>
             </div>
         </div>
     </section>
