--- a/index.html
+++ b/index.html
@@ -23,5 +23,8 @@
             </div>
         </div>
     </section>
+    <script>
+        let query = document.querySelector('.query');
+    </script>
 </body>
 </html>
