--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
         searchBtn.onclick = function() {
             let url = 'https://www.google.com/search?q=' + query.value;
+            window.open(url);
         }
     </script>
 </body>
