--- a/index.html
+++ b/index.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Google</title>
-</head>
-<body>
+  </head>
+  <body>
     <section>
-        <div class="main">
-            <img src="images/google.png" alt="Google logo">
-            <div class="searchBx">
-                <input type="text" name='' class='query' value=''>
-                <div class="icons">
-                    <div><img src="images/search.png" alt="Search icon"></div>
-                    <div><img src="images/mic.png" alt="Mic icon"></div>
-                </div>
-            </div>
-            <div class="button">
-                <button class="searchBtn">Google Search</button>
-            </div>
+      <div class="main">
+        <img src="images/google.png" alt="Google logo" />
+        <div class="searchBx">
+          <input type="text" name="" class="query" value="" />
+          <div class="icons">
+            <div><img src="images/search.png" alt="Search icon" /></div>
+            <div><img src="images/mic.png" alt="Mic icon" /></div>
+          </div>
         </div>
+        <div class="button">
+          <button class="searchBtn">Google Search</button>
+        </div>
+      </div>
     </section>
     <script>
-        let query = document.querySelector('.query');
-        let searchBtn = document.querySelector('.searchBtn');
+      let query = document.querySelector('.query');
+      let searchBtn = document.querySelector('.searchBtn');
 
-        searchBtn.onclick = function() {
-            let url = 'https://www.google.com/search?q=' + query.value;
-            window.open(url);
-        }
+      searchBtn.onclick = function () {
+        let url = 'https://www.google.com/search?q=' + query.value;
+        window.open(url, '_self');
+      };
     </script>
-</body>
+  </body>
 </html>
